Details
-
Bug
-
Resolution: Fixed
-
P2: Important
-
Qt Creator 14.0.0-rc1
-
-
60b0d88df (14.0)
Description
I have a couple of Qt versions inside Qt Creator configured (linked with Qt)
Enabling to use lower Qt versions than Qt6.8 tried to start the qmlls - but it failed. But for whatever reasons it did not even try to run qmlls from the Qt installation - it appears to try to load it from QC's app bundle.
General Messages shows something like: LanguageClient Qmlls (/Users/chris/testing/QtCreator14.0.0-rc1/Qt Creator.app/Contents/MacOS/qmlls): Unexpectedly finished.
Attachments
For Gerrit Dashboard: QTCREATORBUG-31207 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
575679,3 | Fix warning message due to incorrect qmlls path | 14.0 | qt-creator/qt-creator | Status: MERGED | +2 | +1 |